fix: #1235: Fixed details page content overflowing

--- a/packages/apps/spaces/components/organization/organization-contacts/organization-contacts.module.scss
+++ b/packages/apps/spaces/components/organization/organization-contacts/organization-contacts.module.scss
@@ -2,6 +2,7 @@
 
 .contactsList {
   padding: 0;
+  overflow: hidden;
 }
 .contactItem {
   margin-bottom: var(--spacing-sm);
