--- a/packages/apps/spaces/pages/organization/organization.module.scss
+++ b/packages/apps/spaces/pages/organization/organization.module.scss
@@ -1,5 +1,9 @@
+.organizationIdCard {
+  grid-area: idCard;
+}
 .organizationDetails {
   grid-area: details;
+  overflow-y: scroll;
 }
 .communicationDetails {
   grid-area: contactDetails;
